--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
   <properties>
     <hadoop.version>2.3.0</hadoop.version>
     <hive.version>0.13.0</hive.version>
+    <h2.version>1.4.181</h2.version>
+    <joda.time.version>2.3</joda.time.version>
   </properties>
 
   <dependencies>
@@ -46,7 +48,13 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
-      <version>1.4.181</version>
+      <version>${h2.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>${joda.time.version}</version>
     </dependency>
 
     <dependency>
